[package]
name = "hyper-server"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3"
rustls = { version = "0.17", optional = true }
tokio-rustls = { version = "0.13", optional = true }

[features]
default = []
https = ["rustls", "tokio-rustls"]
